fix(variant): SKFP-757 fix alignement

--- a/src/views/VariantEntity/index.module.scss
+++ b/src/views/VariantEntity/index.module.scss
@@ -30,3 +30,7 @@
     }
   }
 }
+
+.frequencyParticipantLink {
+  padding: 0;
+}
